# One-Core-Api-Source

./: README  README.md
wrappers/aplications/wevtutil/: CMakeLists.txt
wrappers/base/: CMakeLists.txt
wrappers/base/advapi32_wrapper/: CMakeLists.txt  advapi32_wrapper - Cópia.spec  advapi32_wrapper.spec  eventlog.c  hooks.c  logon32.c  main.h  perf.c  reg.c  security.c  security_.c
wrappers/base/bcrypt_wrapper/: CMakeLists.txt
wrappers/base/browseui_wrapper/: CMakeLists.txt
wrappers/base/cfgmgr32_wrapper/: CMakeLists.txt  cfgmgr32_wrapper.spec  main.c
wrappers/base/comctlext/: TestXTaskDialog.vcxproj  XTaskDialog.cpp
wrappers/base/comdlg32_wrapper/: CMakeLists.txt  cdlg32.c  comdlg32_wrapper.spec  filedlg.c  filedlgbrowser.c  itemdlg.c  itemdlg_.c  main.c  printdlg.c
wrappers/base/crypt32_wrapper/: CMakeLists.txt  main.c
wrappers/base/cryptex_wrapper/: CMakeLists.txt
wrappers/base/cryptext_wrapper/: CMakeLists.txt  cryptext_wrapper.spec
wrappers/base/dwrite_wrapper/: CMakeLists.txt  main.c
wrappers/base/gdi32_wrapper/: CMakeLists.txt  d3dkmt.c  font.c  gdi32_wrapper.spec  main.c  main.h  version.rc
wrappers/base/iphlpapi_wrapper/: CMakeLists.txt
wrappers/base/kernelbase_wrapper/: CMakeLists.txt  appmodel.c  datetime.c  dllmain.c  filehops.c  fileinfo.c  filemap.c  filemisc.c  fileopcr.c  kernelbase.spec  locale.c  main.h  mem.c  module.c  path.c  pathmisc.c  process.c  security.c  support.c  synch.c  thread.c  time.c  version.rc  xstate.c
wrappers/base/netapi32_wrapper/: CMakeLists.txt  main.c  netapi32_wrapper.spec  version.rc
wrappers/base/ntext_wrapper/: CMakeLists.txt  actctx.c  main.c  main.h  ntext.spec
wrappers/base/ole32_wrapper/: CMakeLists.txt  apartment.c  main.c  main.h  marshal.c  mta.c  ole32_wrapper.spec  rpc.c  version.rc
wrappers/base/pdh_wrapper/: CMakeLists.txt
wrappers/base/powrprof_wrapper/: CMakeLists.txt  main.c  powrprof_wrapper.spec
wrappers/base/progwrp_wrapper/: CMakeLists.txt  main.c  progwrp_wrapper.spec  version.rc
wrappers/base/rpcrt4_wrapper/: CMakeLists.txt
wrappers/base/secur32_wrapper/: CMakeLists.txt  secur32_wrapper.spec
wrappers/base/setupapi_wrapper/: CMakeLists.txt  devinst.c  query.c  setupapi_private.h  setupapi_wrapper.spec
wrappers/base/shell32_wrapper/: CMakeLists.txt  ebrowser.c  main.c  main.h  pidl.c  propsys.h  shell32_wrapper.spec  shellexec.c  shelllink.c  shellole.c  shellpath.c  shlfileop.c  shlfsbind.c  unimplemented.c  version.rc
wrappers/base/shlwapi_wrapper/: CMakeLists.txt  main.c  shlwapi_wrapper.spec  thread.c
wrappers/base/user32_wrapper/: CMakeLists.txt  display.c  dpi.c  dwm.c  hooks.c  main.c  main.h  misc.c  process.c  sysparams.c  timer.c  touch.c  user32_wrapper.spec  window.c
wrappers/base/userenv/: CMakeLists.txt
wrappers/base/userenv_wrapper/: CMakeLists.txt  main.c  precomp.h  userenv_wrapper.spec
wrappers/base/uxtheme_wrapper/: CMakeLists.txt  hooks.c  main.c  uxtheme_wrapper.spec
wrappers/base/winsta_wrapper/: CMakeLists.txt
wrappers/base/winttp_wrapper/: CMakeLists.txt  main.c  winhttp_wrapper.spec
wrappers/base/ws2_32_wrapper/: CMakeLists.txt  CMakeLists_.txt  hooks.c  main.c  main.h  protocol.c  socket.c  ws2_32_wrapper.spec
wrappers/dependencies/comdlgbase/: CMakeLists.txt  comdlgbase.spec
wrappers/dependencies/cryptbase/: CMakeLists.txt  cryptbase.spec
wrappers/dependencies/winhttpbase/: CMakeLists.txt
wrappers/extensions/: CMakeLists.txt
wrappers/extensions/advapiex/: CMakeLists.txt  advapiex.spec  cred.c  efs.c  eventlog.c  hooks.c  logon32.c  main.c  main.h  perf.c  reg.c  security.c  sha1.c
wrappers/extensions/bcryptext/: CMakeLists.txt  bcryptext.spec  main.c  version.rc
wrappers/extensions/browseex/: CMakeLists.txt
wrappers/extensions/cfgmgrex/: CMakeLists.txt  cfgmgrex.spec  devinst.c
wrappers/extensions/comdlgex/: CMakeLists.txt  comdlg32.rc  comdlgex.spec  filedlg31.c  filedlgbrowser.c  main.h
wrappers/extensions/cryptex/: CMakeLists.txt  cryptex.spec  cryptex_wrapper.spec  main.c  version.rc
wrappers/extensions/dnsapiext/: CMakeLists.txt  dns.c  dnsapiext.spec  version.rc
wrappers/extensions/dxgiext/: CMakeLists.txt  dxgiext.spec  factory.c  main.h  version.rc
wrappers/extensions/iphlpext/: CMakeLists.txt  iphlpapi.c  iphlpext.spec  main.h  version.rc
wrappers/extensions/kernelbase/: CMakeLists.txt  appmodel.c  context.c  datetime.c  error.c  filehops.c  filemap.c  firmware.c  handle.c  kernelbase.spec  locale.c  locale.h  main.h  mem.c  pathmisc.c  process.c  reg.c  security.c  snapshot.c  synch.c  thread.c  xstate.c
wrappers/extensions/kernelex/: CMakeLists.txt  appmodel.c  console.c  context.c  datetime.c  dllatom.c  dllmain.c  filemap.c  filemisc.c  fileopcr.c  firmware.c  job.c  kernelex.spec  locale.c  locale.h  main.h  mem.c  module.c  nls.c  numa.c  path.c  perf.c  powrmgmt.c  process.c  psapi.c  reg.c  security.c  synch.c  sysinfo.c  thread.c  time.c  version.c  version.rc  xstate.c
wrappers/extensions/netapiex/: CMakeLists.txt  main.c  netapiex.spec
wrappers/extensions/ntext/: CMakeLists.txt  MissingVista.txt  crypt.c  main.c  main.h  misc.c  ntext.spec
wrappers/extensions/oleex/: CMakeLists.txt  main.c  oleex.spec
wrappers/extensions/pdhext/: CMakeLists.txt  version.rc
wrappers/extensions/powrpext/: CMakeLists.txt  powrpext.spec  version.rc
wrappers/extensions/rpcrtext/: CMakeLists.txt  rpcrtext.spec  version.rc
wrappers/extensions/securex/: CMakeLists.txt  securex.spec  version.rc
wrappers/extensions/setupext/: CMakeLists.txt  hooks.c  main.c  query.c  setupapi_private.h
wrappers/extensions/shellex/: CMakeLists.txt  hooks.c  main.c  main.h  shellex.spec  shellexec.c  shellole.c  shellpath.c  shfldr.h  shlfileop.c  shlmenu.c
wrappers/extensions/shlwext/: CMakeLists.txt  assoc.c  istream.c  main.c  main.h  shlwext.spec  string.c
wrappers/extensions/uiautomationcoreext/: CMakeLists.txt  main.c  uiautomationcoreext.spec
wrappers/extensions/userenvext/: CMakeLists.txt  main.c  userenvext.spec
wrappers/extensions/userex/: CMakeLists.txt  display.c  dpi.c  dwm.c  hooks.c  (+8 more)
(+433 files in other folders)
