#add_subdirectory(comdlg32_wrapper)
add_subdirectory(gdi32_wrapper)
#add_subdirectory(iphlpapi_wrapper)
#add_subdirectory(netapi32_wrapper)
#add_subdirectory(ole32_wrapper)
#add_subdirectory(pdh_wrapper)
#add_subdirectory(powrprof_wrapper)
add_subdirectory(progwrp_wrapper)
#add_subdirectory(rpcrt4_wrapper)
#add_subdirectory(secur32_wrapper)
#add_subdirectory(setupapi_wrapper)
#add_subdirectory(shell32_wrapper)
#add_subdirectory(shlwapi_wrapper)
#add_subdirectory(winsta_wrapper)
#add_subdirectory(winttp_wrapper)
#add_subdirectory(ws2_32_wrapper)
add_subdirectory(user32_wrapper)
#add_subdirectory(userenv_wrapper)
#add_subdirectory(uxtheme_wrapper)