add_subdirectory(advapiex)
#add_subdirectory(bcryptext)
#add_subdirectory(browseex)
add_subdirectory(cfgmgrex)
add_subdirectory(comdlgex)
add_subdirectory(cryptex)
add_subdirectory(dnsapiext)
add_subdirectory(dxgiext)
add_subdirectory(iphlpext)
add_subdirectory(kernelex)
add_subdirectory(netapiex)
add_subdirectory(ntext)
add_subdirectory(oleex)
add_subdirectory(pdhext)
add_subdirectory(powrpext)
add_subdirectory(rpcrtext)
add_subdirectory(securex)
add_subdirectory(setupext)
add_subdirectory(shellex)
add_subdirectory(shlwext)
add_subdirectory(userenvext)
add_subdirectory(uxthext)
add_subdirectory(winstaext)
add_subdirectory(winttpext)
add_subdirectory(ws2_ex)